// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelativeDateTime formats date 1`] = `
<RelativeDateTime
  date={2017-10-13T11:54:55.000Z}
  defaultValue="Default value"
>
  <span
    title="Oct 13, 2017, 11:54 AM"
  >
    <FormattedRelative
      style="numeric"
      updateInterval={10000}
      value={2017-10-13T11:54:55.000Z}
    >
      <span>
        15 days ago
      </span>
    </FormattedRelative>
  </span>
</RelativeDateTime>
`;

exports[`RelativeDateTime renders default value 1`] = `
<RelativeDateTime
  date={null}
  defaultValue="Default value"
>
  <span>
    Default value
  </span>
</RelativeDateTime>
`;
